--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
     <div id="flex-container">
         <div id="container">
+            <iframe src="250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+            <audio id="player" autoplay loop>
+                <source src="images/Fast Ticking clock sound effect.mp3" type="audio/mp3">
+            </audio>
             <h1 id="score">0</h1>
+            <div id="game-over-div">
+                <h1 id="game-over"></h1>
+            </div>
             <img id="trampoline" src="images/8d92a247fb8204a9cab62d92c0cf41f2-removebg-preview.png">
             <img id="building" src="images/house-removebg-preview.png">
-            <!-- <img id="figure" class="jump" src="https://www.ssbwiki.com/images/thumb/b/b2/Mr._Game_%26_Watch_SSB4.png/250px-Mr._Game_%26_Watch_SSB4.png" alt=""> -->
-            
         </div>
     </div>
     <script src="script.js"></script>
