Thursday late afternoon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="flex-container">
         <div id="container">
-            <iframe src="250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+            <!-- <iframe src="250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe> -->
             <audio id="player" autoplay loop>
                 <source src="images/Fast Ticking clock sound effect.mp3" type="audio/mp3">
             </audio>
@@ -20,7 +20,11 @@
             </div>
             <img id="trampoline" src="images/8d92a247fb8204a9cab62d92c0cf41f2-removebg-preview.png">
             <img id="building" src="images/house-removebg-preview.png">
+            <audio id="beep">
+                <source src="images/Gamer Beep Style.mp3" type="audio/mp3">
+            </audio>
         </div>
+        <img id="ambulance" src="images/Download-Ambulance-PNG-Image.png"> 
     </div>
     <script src="script.js"></script>
 </body>
