got rid of the magic man

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img id="trampoline" src="images/8d92a247fb8204a9cab62d92c0cf41f2-removebg-preview.png">
             <img id="building" src="images/house-removebg-preview.png">
             <audio id="beep">
-                <source src="images/Gamer Beep Style.mp3" type="audio/mp3">
+                <source src="images/beep-cut.mp3" type="audio/mp3">
             </audio>
         </div>
         <img id="ambulance" src="images/Download-Ambulance-PNG-Image.png"> 
