--- a/index.html
+++ b/index.html
@@ -1,31 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="flex-container">
-        <div id="container">
-            <!-- <iframe src="250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe> -->
-            <audio id="player" autoplay loop>
-                <source src="images/Fast Ticking clock sound effect.mp3" type="audio/mp3">
-            </audio>
-            <h1 id="score">0</h1>
-            <div id="game-over-div">
-                <h1 id="game-over"></h1>
-            </div>
-            <img id="trampoline" src="images/8d92a247fb8204a9cab62d92c0cf41f2-removebg-preview.png">
-            <img id="building" src="images/house-removebg-preview.png">
-            <audio id="beep">
-                <source src="images/beep-cut.mp3" type="audio/mp3">
-            </audio>
-        </div>
-        <img id="ambulance" src="images/Download-Ambulance-PNG-Image.png"> 
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+<link rel="stylesheet" href="screen.css">
+
+<div>
+    <a href="game.html" target="_self">
+        <img id="opener" src="images/giphy.gif" alt="">
+    </a>
+    <audio id="player" autoplay loop>
+        <source src="images/Main Theme - Super Smash Bros Brawl.mp3" type="audio/mp3">
+    </audio>
+</div>
