--- a/game.html
+++ b/game.html
@@ -29,7 +29,9 @@
             </ul>
         </div> 
         <div id="container">
-            <!-- <iframe src="250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe> -->
+            <audio id="crunch">
+                <source src="images/410913__tomchikrec__short-crunchy-splat.wav">
+            </audio>
             <audio id="player" autoplay loop>
                 <source src="images/Fast Ticking clock sound effect.mp3" type="audio/mp3">
             </audio>
